# DMease-AI-based-Assistant-for-Chinese-Medicine-Doctors-to-Diagnose-Diabetes-Mellitus

./: .gitignore  README.md  environment.yml  pyproject.toml  train.py
app/: streamlit_app.py
configs/: dmease.yaml  train.yml
configs/data/: default.yaml
configs/model/: baseline.yaml
data/: README.md
data/examples/: herb_target_affinity.csv  patients.jsonl  triples.jsonl
materials/experiment_samples/: README.md  configured_kg_triples.csv  experiment_summary_P2025-0001.csv  inference_result_P2025-0001.json  prescription_steps_P2025-0001.csv  ranked_candidates_P2025-0001.csv  symptom_target_scores_P2025-0001.csv
prompts/: triplet_extraction_zh.md
scripts/: build_kg.py  infer_example.py
src/data/: datamodule.py  make_dataset.py
src/dmease/: __init__.py  cli.py  constraints.py  diagnosis.py  io.py  kan.py  knowledge_graph.py  metrics.py  patient_db.py  pipeline.py  policy.py  schemas.py  semantic_parser.py
src/models/: lightning_module.py  modules.py
tests/: test_pipeline.py
